--- a/index.html
+++ b/index.html
@@ -25,7 +25,20 @@
 				Temperament:"medium"
 			}];
 			
-
+		/* Starting at index 0, ending at index 3
+		 * increment by one every time
+		 */	
+			
+			for(var i=0;i<4;i++){
+				
+				var item = dogs[i]; 
+				
+				console.log(i);
+				console.log(item);
+			}
+			
+			
+		
 			
 			
 			
